--- a/notebooks/plot_predictions.ipynb
+++ b/notebooks/plot_predictions.ipynb
@@ -83,6 +83,7 @@
     "        assert ckpt_dir.exists(), f\"directory {ckpt_dir} does not exist.\"\n",
     "        ckpt = list(ckpt_dir.glob(\"*\"))[0]\n",
     "        model = WaveNetSystem.load_from_checkpoint(ckpt)\n",
+    "        model.eval()\n",
     "\n",
     "        # predict zernikes\n",
     "        zk_pred, _ = model.predict_step(donuts, None)\n",
